# nfp

./: .travis.yml  CHANGELOG  Makefile.am  README.md  TODO  configure.ac
config/: README  nfp_flv_default.conf  nfp_flv_memory_footprint.conf  nfp_flv_netwrap_default.conf  nfp_flv_netwrap_webserver.conf  nfp_flv_webserver.conf
docs/: Doxyfile.api  Doxyfile.main  NFP_performance_results.odt  nfp-user-guide.adoc  nfp-user-guide.html  release-policy.adoc
example/: Makefile.am  Makefile.inc  README
example/classifier/: .gitignore  Makefile.am  classifier.c  classifier.h  classifier_main.c  classifier_term.c  classifier_term.h
example/common/: cli_arg_parse.c  cli_arg_parse.h  linux_resources.c  linux_resources.h  linux_sigaction.c  linux_sigaction.h
example/fpm/: .gitignore  Makefile.am  app_main.c
example/fpm_direct/: .gitignore  Makefile.am  app_main.c
example/fpm_power/: .gitignore  0001-pktin-Add-RX-interrupt-management-API.patch  Makefile.am  README  app_main.c
example/ioctl_test/: .gitignore  Makefile.am  app_main.c  ioctl_test.c  ioctl_test.h
example/ipsec/: README  aescbc_sha1.cli  aesgcm.cli  nfp.conf
example/multicast/: .gitignore  Makefile.am  app_main.c  mcast.c  mcast.h
example/multiprocess/: .gitignore  Makefile.am  multiprocess_main.c
example/netwrap_crt/: Makefile.am  netwrap_common.c  netwrap_common.h  netwrap_epoll.c  netwrap_errno.h  netwrap_fork.c  netwrap_ioctl.c  netwrap_select.c  netwrap_sendfile.c  netwrap_socket.c  netwrap_sockopt.c  netwrap_uio.c
example/netwrap_proc/: Makefile.am  app_main.c
example/socket/: .gitignore  Makefile.am  socket_bind.c  socket_connect_accept_tcp.c  socket_connect_udp.c  socket_create_close.c  socket_getaddrinfo.c  socket_getaddrinfo.h  socket_getnameinfo.c  socket_getnameinfo.h  socket_getpeername.c  socket_getpeername.h  socket_getservent.c  socket_getservent.h  socket_getsockname.c  socket_getsockname.h  socket_listen_tcp.c  socket_main.c  socket_select.c  socket_send_recv_tcp.c  socket_send_recv_tcp.h  socket_send_recv_udp.c  socket_send_sendto_udp.c  socket_sendmsg_recvmsg.c  socket_sendmsg_recvmsg.h  socket_shutdown.c  socket_sigevent.c  socket_util.h  suite_framework.c
example/tcpperf/: .gitignore  Makefile.am  app_main.c
example/udp_fwd_socket/: .gitignore  Makefile.am  app_main.c  udp_fwd_socket.c  udp_fwd_socket.h
example/udp_term_socket/: .gitignore  Makefile.am  app_main.c  udp_term_socket.c  udp_term_socket.h
example/udpecho/: .gitignore  Makefile.am  app_main.c  udp_server.c
example/vnf/: README  nfp_flv_vnf1.conf  nfp_flv_vnf2.conf
example/webserver/: .gitignore  Makefile.am  app_main.c  httpd.c  httpd.h  nfp.cli
example/webserver2/: .gitignore  Makefile.am  app_main.c  httpd.h  httpd2.c
include/api/: nfp.h  nfp_api_cli.h  nfp_config.h  nfp_debug.h  nfp_dns.h  nfp_dns_common.h  nfp_epoll.h  nfp_errno.h  nfp_ethernet.h  nfp_hook.h  nfp_icmp.h  nfp_icmp6.h  nfp_if_vlan.h  nfp_ifaddrs.h  nfp_ifnet.h  nfp_ifnet_portconf.h  nfp_in.h  nfp_in6.h  nfp_init.h  nfp_ioctl.h  nfp_ip.h  nfp_ip6.h  nfp_ip_var.h  nfp_ipsec.h  nfp_ipsec_init.h  nfp_log.h  nfp_nd6.h  nfp_netdb.h  nfp_pkt_channel.h  nfp_pkt_processing.h  nfp_pkt_vector.h  nfp_print.h  nfp_queue.h  nfp_route_arp.h  nfp_select.h  nfp_socket.h  nfp_socket_sigevent.h  nfp_socket_types.h  nfp_stat.h  nfp_sysctl.h  (+7 more)
lib/x86/shared/: libnfp.so.7  libnfp.so.8
scripts/: devbuild_all.sh  nfp.cli  nfp_linux_interface_acquire.sh  nfp_linux_interface_release.sh  nfp_netwrap.sh
test/: .gitignore  Makefile.am  nfp_cpp_test.cpp  nfp_redefinitions_posix_test.c
